syntax = "proto3";

package randomPackage;

service Random {
    rpc PingPong(PingRequest) returns (PingResponse) {};
    rpc RandomNumbers(RandomNumbersRequest) returns (stream RandomNumbersResponse) {};
    rpc TodoList(stream TodoListRequest) returns (TodoListResponse) {};
}

message PingRequest {
    string message = 1;
}
message PingResponse {
    string message = 1;
}
message RandomNumbersRequest {
    int32 maxVal = 1;
}
message RandomNumbersResponse {
    int32 num = 1;
}
message TodoListRequest {
    string todo = 1;
    string status = 2;
}
message TodoListResponse {
    repeated TodoListRequest todoLists = 1;
}