// Original file: proto/random.proto

import type { TodoListRequest as _randomPackage_TodoListRequest, TodoListRequest__Output as _randomPackage_TodoListRequest__Output } from '../randomPackage/TodoListRequest';

export interface TodoListResponse {
  'todoLists'?: (_randomPackage_TodoListRequest)[];
}

export interface TodoListResponse__Output {
  'todoLists'?: (_randomPackage_TodoListRequest__Output)[];
}
